Polygon変換用スクリプト本体と画像作成用スクリプトを回転なし仕様に変更

--- a/src_dataset/Checking_Dataset.ipynb
+++ b/src_dataset/Checking_Dataset.ipynb
@@ -298,6 +298,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coord_df = pickle_load(\"/Users/komatsu/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/201005coord_df.pickle\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "                                                               Polygon  \\\n2010-05-01 00:00:00  [[[3698.0, 1204.0], [3698.0, 1205.0], [3697.0,...   \n2010-05-01 01:00:00  [[[3693.0, 1201.0], [3693.0, 1202.0], [3692.0,...   \n2010-05-01 02:00:00  [[[3692.0, 1199.0], [3692.0, 1200.0], [3691.0,...   \n2010-05-01 03:00:00  [[[3687.0, 1198.0], [3687.0, 1199.0], [3686.0,...   \n2010-05-01 04:00:00  [[[3681.0, 1198.0], [3681.0, 1199.0], [3680.0,...   \n...                                                                ...   \n2010-05-31 20:00:00                                                 []   \n2010-05-31 21:00:00                                                 []   \n2010-05-31 22:00:00                                                 []   \n2010-05-31 23:00:00                                                 []   \n2010-06-01 00:00:00                                                 []   \n\n                                C_FLARE             M_FLARE  \\\n2010-05-01 00:00:00  [0, 0, 0, 0, 0, 0]  [0, 0, 0, 0, 0, 0]   \n2010-05-01 01:00:00     [0, 0, 0, 0, 0]     [0, 0, 0, 0, 0]   \n2010-05-01 02:00:00        [0, 0, 0, 0]        [0, 0, 0, 0]   \n2010-05-01 03:00:00        [0, 0, 0, 0]        [0, 0, 0, 0]   \n2010-05-01 04:00:00        [0, 0, 0, 0]        [0, 0, 0, 0]   \n...                                 ...                 ...   \n2010-05-31 20:00:00                  []                  []   \n2010-05-31 21:00:00                  []                  []   \n2010-05-31 22:00:00                  []                  []   \n2010-05-31 23:00:00                  []                  []   \n2010-06-01 00:00:00                  []                  []   \n\n                                X_FLARE  \n2010-05-01 00:00:00  [0, 0, 0, 0, 0, 0]  \n2010-05-01 01:00:00     [0, 0, 0, 0, 0]  \n2010-05-01 02:00:00        [0, 0, 0, 0]  \n2010-05-01 03:00:00        [0, 0, 0, 0]  \n2010-05-01 04:00:00        [0, 0, 0, 0]  \n...                                 ...  \n2010-05-31 20:00:00                  []  \n2010-05-31 21:00:00                  []  \n2010-05-31 22:00:00                  []  \n2010-05-31 23:00:00                  []  \n2010-06-01 00:00:00                  []  \n\n[745 rows x 4 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Polygon</th>\n      <th>C_FLARE</th>\n      <th>M_FLARE</th>\n      <th>X_FLARE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-05-01 00:00:00</th>\n      <td>[[[3698.0, 1204.0], [3698.0, 1205.0], [3697.0,...</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 01:00:00</th>\n      <td>[[[3693.0, 1201.0], [3693.0, 1202.0], [3692.0,...</td>\n      <td>[0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 02:00:00</th>\n      <td>[[[3692.0, 1199.0], [3692.0, 1200.0], [3691.0,...</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 03:00:00</th>\n      <td>[[[3687.0, 1198.0], [3687.0, 1199.0], [3686.0,...</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-01 04:00:00</th>\n      <td>[[[3681.0, 1198.0], [3681.0, 1199.0], [3680.0,...</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 20:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 21:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 22:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 23:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-06-01 00:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n  </tbody>\n</table>\n<p>745 rows × 4 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "coord_df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
