--- a/src_dataset/shuffle_dataset.ipynb
+++ b/src_dataset/shuffle_dataset.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3"
+   "display_name": "Python 3",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -23,18 +24,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import utils\n",
-    "df_path = \"merged_df.pickle\"\n",
+    "df_path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/8hr/15months/merged_df.pickle\"\n",
     "coord_df = utils.pickle_load(df_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,67 +52,152 @@
      "data": {
       "text/plain": [
        "                                                               Polygon  \\\n",
-       "2010-11-24 04:00:00  [[[1420.0, 1167.0], [1420.0, 1168.0], [1419.0,...   \n",
-       "2010-06-11 16:00:00  [[[246.0, 2607.0], [246.0, 2608.0], [245.0, 26...   \n",
-       "2011-06-04 04:00:00  [[[1074.0, 1417.0], [1074.0, 1418.0], [1073.0,...   \n",
-       "2011-05-24 14:00:00  [[[1054.0, 2449.0], [1054.0, 2450.0], [1053.0,...   \n",
-       "2010-05-31 16:00:00  [[[1006.0, 1321.0], [1006.0, 1322.0], [1005.0,...   \n",
+       "2010-12-29 15:00:00  [[[1313.0, 1340.0], [1313.0, 1341.0], [1312.0,...   \n",
+       "2011-06-19 16:00:00  [[[307.0, 2468.0], [307.0, 2469.0], [306.0, 24...   \n",
+       "2010-09-23 03:00:00  [[[351.0, 2709.0], [351.0, 2710.0], [350.0, 27...   \n",
+       "2011-04-25 21:00:00  [[[276.0, 1359.0], [276.0, 1361.0], [275.0, 13...   \n",
+       "2011-01-02 12:00:00  [[[1159.0, 1574.0], [1159.0, 1575.0], [1158.0,...   \n",
        "...                                                                ...   \n",
-       "2011-03-25 19:00:00  [[[758.0, 1507.0], [758.0, 1508.0], [757.0, 15...   \n",
-       "2010-09-30 15:00:00                                                 []   \n",
-       "2010-12-16 10:00:00  [[[387.0, 1397.0], [387.0, 1398.0], [386.0, 13...   \n",
-       "2011-03-24 08:00:00                                                 []   \n",
-       "2011-03-07 06:00:00  [[[446.0, 1280.0], [446.0, 1281.0], [445.0, 12...   \n",
+       "2010-08-05 10:00:00  [[[1572.0, 1453.0], [1572.0, 1454.0], [1571.0,...   \n",
+       "2011-03-24 07:00:00                                                 []   \n",
+       "2010-09-09 17:00:00  [[[855.0, 1458.0], [855.0, 1459.0], [854.0, 14...   \n",
+       "2010-12-09 00:00:00  [[[1813.0, 843.0], [1813.0, 844.0], [1812.0, 8...   \n",
+       "2011-04-26 00:00:00  [[[273.0, 1368.0], [273.0, 1370.0], [272.0, 13...   \n",
        "\n",
-       "                                                               C_FLARE  \\\n",
-       "2010-11-24 04:00:00                                          [0, 0, 0]   \n",
-       "2010-06-11 16:00:00  [0, {\"magnitude\": \"C1.0\", \"id\": 86, \"NOAA_AR\":...   \n",
-       "2011-06-04 04:00:00                     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "2011-05-24 14:00:00         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "2010-05-31 16:00:00                                       [0, 0, 0, 0]   \n",
-       "...                                                                ...   \n",
-       "2011-03-25 19:00:00                                 [0, 0, 0, 0, 0, 0]   \n",
-       "2010-09-30 15:00:00                                                 []   \n",
-       "2010-12-16 10:00:00                                 [0, 0, 0, 0, 0, 0]   \n",
-       "2011-03-24 08:00:00                                                 []   \n",
-       "2011-03-07 06:00:00  [0, 0, {\"magnitude\": \"C5.1\", \"id\": 1403, \"NOAA...   \n",
+       "                                                           C_FLARE  \\\n",
+       "2010-12-29 15:00:00                                   [0, 0, 0, 0]   \n",
+       "2011-06-19 16:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2010-09-23 03:00:00                             [0, 0, 0, 0, 0, 0]   \n",
+       "2011-04-25 21:00:00  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-01-02 12:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "...                                                            ...   \n",
+       "2010-08-05 10:00:00                          [0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-03-24 07:00:00                                             []   \n",
+       "2010-09-09 17:00:00                                      [0, 0, 0]   \n",
+       "2010-12-09 00:00:00                    [0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-04-26 00:00:00     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
        "\n",
-       "                                                               M_FLARE  \\\n",
-       "2010-11-24 04:00:00                                          [0, 0, 0]   \n",
-       "2010-06-11 16:00:00                                          [0, 0, 0]   \n",
-       "2011-06-04 04:00:00                     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "2011-05-24 14:00:00         [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
-       "2010-05-31 16:00:00                                       [0, 0, 0, 0]   \n",
-       "...                                                                ...   \n",
-       "2011-03-25 19:00:00                                 [0, 0, 0, 0, 0, 0]   \n",
-       "2010-09-30 15:00:00                                                 []   \n",
-       "2010-12-16 10:00:00                                 [0, 0, 0, 0, 0, 0]   \n",
-       "2011-03-24 08:00:00                                                 []   \n",
-       "2011-03-07 06:00:00  [0, {\"magnitude\": \"M1.4\", \"id\": 1399, \"NOAA_AR...   \n",
+       "                                                           M_FLARE  \\\n",
+       "2010-12-29 15:00:00                                   [0, 0, 0, 0]   \n",
+       "2011-06-19 16:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2010-09-23 03:00:00                             [0, 0, 0, 0, 0, 0]   \n",
+       "2011-04-25 21:00:00  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-01-02 12:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "...                                                            ...   \n",
+       "2010-08-05 10:00:00                          [0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-03-24 07:00:00                                             []   \n",
+       "2010-09-09 17:00:00                                      [0, 0, 0]   \n",
+       "2010-12-09 00:00:00                    [0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
+       "2011-04-26 00:00:00     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]   \n",
        "\n",
-       "                                                        X_FLARE  \n",
-       "2010-11-24 04:00:00                                   [0, 0, 0]  \n",
-       "2010-06-11 16:00:00                                   [0, 0, 0]  \n",
-       "2011-06-04 04:00:00              [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
-       "2011-05-24 14:00:00  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
-       "2010-05-31 16:00:00                                [0, 0, 0, 0]  \n",
-       "...                                                         ...  \n",
-       "2011-03-25 19:00:00                          [0, 0, 0, 0, 0, 0]  \n",
-       "2010-09-30 15:00:00                                          []  \n",
-       "2010-12-16 10:00:00                          [0, 0, 0, 0, 0, 0]  \n",
-       "2011-03-24 08:00:00                                          []  \n",
-       "2011-03-07 06:00:00                 [0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
+       "                                                           X_FLARE  \n",
+       "2010-12-29 15:00:00                                   [0, 0, 0, 0]  \n",
+       "2011-06-19 16:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]  \n",
+       "2010-09-23 03:00:00                             [0, 0, 0, 0, 0, 0]  \n",
+       "2011-04-25 21:00:00  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
+       "2011-01-02 12:00:00                       [0, 0, 0, 0, 0, 0, 0, 0]  \n",
+       "...                                                            ...  \n",
+       "2010-08-05 10:00:00                          [0, 0, 0, 0, 0, 0, 0]  \n",
+       "2011-03-24 07:00:00                                             []  \n",
+       "2010-09-09 17:00:00                                      [0, 0, 0]  \n",
+       "2010-12-09 00:00:00                    [0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
+       "2011-04-26 00:00:00     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]  \n",
        "\n",
        "[11713 rows x 4 columns]"
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Polygon</th>\n      <th>C_FLARE</th>\n      <th>M_FLARE</th>\n      <th>X_FLARE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-11-24 04:00:00</th>\n      <td>[[[1420.0, 1167.0], [1420.0, 1168.0], [1419.0,...</td>\n      <td>[0, 0, 0]</td>\n      <td>[0, 0, 0]</td>\n      <td>[0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-06-11 16:00:00</th>\n      <td>[[[246.0, 2607.0], [246.0, 2608.0], [245.0, 26...</td>\n      <td>[0, {\"magnitude\": \"C1.0\", \"id\": 86, \"NOAA_AR\":...</td>\n      <td>[0, 0, 0]</td>\n      <td>[0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-06-04 04:00:00</th>\n      <td>[[[1074.0, 1417.0], [1074.0, 1418.0], [1073.0,...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-05-24 14:00:00</th>\n      <td>[[[1054.0, 2449.0], [1054.0, 2450.0], [1053.0,...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-05-31 16:00:00</th>\n      <td>[[[1006.0, 1321.0], [1006.0, 1322.0], [1005.0,...</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2011-03-25 19:00:00</th>\n      <td>[[[758.0, 1507.0], [758.0, 1508.0], [757.0, 15...</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-09-30 15:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-12-16 10:00:00</th>\n      <td>[[[387.0, 1397.0], [387.0, 1398.0], [386.0, 13...</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-03-24 08:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2011-03-07 06:00:00</th>\n      <td>[[[446.0, 1280.0], [446.0, 1281.0], [445.0, 12...</td>\n      <td>[0, 0, {\"magnitude\": \"C5.1\", \"id\": 1403, \"NOAA...</td>\n      <td>[0, {\"magnitude\": \"M1.4\", \"id\": 1399, \"NOAA_AR...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n  </tbody>\n</table>\n<p>11713 rows × 4 columns</p>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Polygon</th>\n      <th>C_FLARE</th>\n      <th>M_FLARE</th>\n      <th>X_FLARE</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>2010-12-29 15:00:00</th>\n      <td>[[[1313.0, 1340.0], [1313.0, 1341.0], [1312.0,...</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-06-19 16:00:00</th>\n      <td>[[[307.0, 2468.0], [307.0, 2469.0], [306.0, 24...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-09-23 03:00:00</th>\n      <td>[[[351.0, 2709.0], [351.0, 2710.0], [350.0, 27...</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-04-25 21:00:00</th>\n      <td>[[[276.0, 1359.0], [276.0, 1361.0], [275.0, 13...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-01-02 12:00:00</th>\n      <td>[[[1159.0, 1574.0], [1159.0, 1575.0], [1158.0,...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>2010-08-05 10:00:00</th>\n      <td>[[[1572.0, 1453.0], [1572.0, 1454.0], [1571.0,...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-03-24 07:00:00</th>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n      <td>[]</td>\n    </tr>\n    <tr>\n      <th>2010-09-09 17:00:00</th>\n      <td>[[[855.0, 1458.0], [855.0, 1459.0], [854.0, 14...</td>\n      <td>[0, 0, 0]</td>\n      <td>[0, 0, 0]</td>\n      <td>[0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2010-12-09 00:00:00</th>\n      <td>[[[1813.0, 843.0], [1813.0, 844.0], [1812.0, 8...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n    <tr>\n      <th>2011-04-26 00:00:00</th>\n      <td>[[[273.0, 1368.0], [273.0, 1370.0], [272.0, 13...</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]</td>\n    </tr>\n  </tbody>\n</table>\n<p>11713 rows × 4 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 3
     }
    ],
    "source": [
     "shuffled_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "train_data:881:58339:val_data:213:14705\n"
+     ]
+    }
+   ],
+   "source": [
+    "split_num = int(len(shuffled_df)*0.8)\n",
+    "train_df = shuffled_df.iloc[:split_num,:]\n",
+    "val_df = shuffled_df.iloc[split_num:,:]\n",
+    "count_train_t = 0\n",
+    "count_val_t = 0\n",
+    "count_train_f = 0\n",
+    "count_val_f = 0\n",
+    "for values in train_df.loc[:,\"C_FLARE\"].values:\n",
+    "    for value in values:\n",
+    "        if value != 0:\n",
+    "            count_train_t += 1\n",
+    "        else:\n",
+    "            count_train_f += 1\n",
+    "for values in val_df.loc[:,\"C_FLARE\"].values:\n",
+    "    for value in values:\n",
+    "        if value != 0:\n",
+    "            count_val_t += 1\n",
+    "        else:\n",
+    "            count_val_f +=1\n",
+    "print(\"train_data:{}:{}:val_data:{}:{}\".format(count_train_t,count_train_f,count_val_t,count_val_f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[True, True]\ntrain_data:1:8619:val_data:37:2157\n"
+     ]
+    }
+   ],
+   "source": [
+    "count_train_t = 0\n",
+    "count_val_t = 0\n",
+    "count_train_f = 0\n",
+    "count_val_f = 0\n",
+    "for values in train_df.loc[:,\"C_FLARE\"].values:\n",
+    "   for value in values:\n",
+    "       \n",
+    "for values in val_df.loc[:,\"C_FLARE\"].values:\n",
+    "    if (all([value==0 for value in values])):\n",
+    "       count_val_f+=1\n",
+    "    else:\n",
+    "        count_val_t+=1\n",
+    "print(\"train_data:{}:{}:val_data:{}:{}\".format(count_train_t,count_train_f,count_val_t,count_val_f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.to_pickle(\"../train_df.pickle\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_df.to_pickle(\"../val_df.pickle\")"
    ]
   },
   {
