データセット作成用スクリプト微修正&

--- a/src_dataset/shuffle_dataset.ipynb
+++ b/src_dataset/shuffle_dataset.ipynb
@@ -24,11 +24,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import utils\n",
+    "import glob\n",
+    "coord_df_paths = glob.glob(\"/media/akito/Data21/Experiments/resample(202105)/balance_dataset/201005_1107_shuffle/coord_df/*.pickle\")\n",
+    "coord_df = utils.open(coord_df_paths[0])\n",
+    "for coord_df_path in coord_df_paths:\n",
+    "\n",
+    "    utils.pickle_open(coord_df_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "df_path = \"/home/akito/Documents/Predict_Solar_Flare_Mrcnn/coord_dfs/8hr/15months/merged_df.pickle\"\n",
     "coord_df = utils.pickle_load(df_path)"
    ]
@@ -38,9 +53,7 @@
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "shuffled_df = coord_df.sample(frac=1)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
